owncloud: Set the correct port number in GoaFiles:Uri

Thing is that soup_uri_set_scheme has the side-effect of setting the
port to the default port for the specified scheme. Therefore when we
change http(s) to dav(s) we lose the non-standard port, if any. We
need to save the original port number and set it again.

Also, it is cleaner to use a temporary copy than modifying the
original object. Unintended side-effects like this will be contained
within the function and not be leaked to the caller.

https://bugzilla.gnome.org/show_bug.cgi?id=752736